关于界面，日志修改

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,26 +14,28 @@
                     <p>{% trans '中国科学院计算机网络信息中心，科技云部。' %}</p>
                 </div>
                 <div class="p-2">
-                    <h5>{% trans '最新版本' %}   {{ version }}</h5>
+                    <h5>{% trans '最新版本' %}   {{ version }}
+                        <span><a href="{% url 'docs:docs' %}#/changelog" target="view_window">
+                            {% trans '变更日志' %}</a>
+                        </span>
+                    </h5>
 
                     {%  if version_git_change_set  %}
 
-                        {% for value in version_git_change_set %}
+                        {% for key, value in version_git_change_set.items %}
                             <p>
-                                <i class="fa fa-tag" aria-hidden="true" style="color: #0d6efd"></i>
-                                <span class="p-2 bd-highlight" style="color: #0d6efd">{{ value.0 }} </span>
-                                <hr/>
-                                <i class="fa fa-clock" aria-hidden="true" style="color: #0d6efd"></i>
-                                <span class="p-2 bd-highlight">{{ value.1 | date:'Y-m-d H:i:s'  }}</span>
-                                <i class="fa fa-user" aria-hidden="true" style="color: #0d6efd"></i>
-                                <span class="p-2 bd-highlight">{{ value.2 }}</span>
-                                <i class="fa fa-envelope" aria-hidden="true" style="color: #0d6efd"></i>
-                                <span class="p-2 bd-highlight">{{ value.3 }}</span>
-                              <span><a href="{% url 'docs:docs' %}#/changelog?id={{ value.0| cut:"." }}" target="view_window">
-                                    {% trans '变更日志' %}</a>
-                              </span>
+                                <span class="p-2 bd-highlight" style="color: #0d6efd">{{ key}} </span>
+
+                                <span class="p-2 bd-highlight">{{ value.0.2 | date:'Y-m-d H:i:s'  }}</span>
+
+                                <span class="p-2 bd-highlight">{{ value.0.0 }}</span>
+
+                                <span class="p-2 bd-highlight">{{ value.0.1 }}</span>
+{#                              <span><a href="{% url 'docs:docs' %}#/changelog?id={{ value.0| cut:"." }}" target="view_window">#}
+{#                                    {% trans '变更日志' %}</a>#}
+{#                              </span>#}
                             </p>
-                            <pre style="white-space: pre-wrap;word-wrap: break-word">{{ value.4 }}
+                            <pre style="white-space: pre-wrap;word-wrap: break-word">{% for value_list in  value|slice:"10" %}{{value_list.3}}{{value_list.0}}<br>{% endfor %}
                             </pre>
 
                         {% endfor %}
