--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -103,6 +103,17 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="list-group-item list-group-item-info">
+                            <div class="row">
+                                <div class="col-md-2"><strong>用户信息</strong></div>
+                                <div class="col-md-10">
+                                    <div class="row">
+                                        <div class="col-md-4"><strong>默认用户名：</strong>{{vm.default_user}}</div>
+                                        <div class="col-md-4"><strong>默认密码：</strong>{{vm.default_password}}</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                         <li class="list-group-item list-group-item-success">
                             <div class="row">
                                 <div class="col-md-2"><strong>备注信息</strong></div>
