前端分中心修改成数据中心

--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -23,7 +23,7 @@
                 <form role="form" class="form-horizontal" method="get" action="">
                     <div class="input-group" style="">
                         <div class="input-group-prepend">
-                            <label class="input-group-text" for="id-center">分中心</label>
+                            <label class="input-group-text" for="id-center">数据中心</label>
                         </div>
                         <select name="center" class="custom-select" id="id-center">
                             <option value="">--</option>
