--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -23,7 +23,7 @@
             <div style="width: 200px">
                 <ul class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
                   <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#center" aria-controls="center" aria-selected="true">分中心</a>
+                    <a class="nav-link active" data-toggle="tab" href="#center" aria-controls="center" aria-selected="true">数据中心</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" data-toggle="tab" href="#host_group" aria-controls="host_group" aria-selected="false">宿主机组</a>
@@ -39,7 +39,7 @@
                         <table class="table">
                             <thead class="thead-light">
                             <tr>
-                                <th>分中心</th>
+                                <th>数据中心</th>
                                 <th>总物理cpu(/核)</th>
                                 <th>总虚拟cpu(/核)</th>
                                 <th>已分配cpu(/核)</th>
@@ -72,7 +72,7 @@
                             <thead class="thead-light">
                             <tr>
                                 <th>宿主机组</th>
-                                <th>分中心</th>
+                                <th>数据中心</th>
                                 <th>总物理cpu(/核)</th>
                                 <th>总虚拟cpu(/核)</th>
                                 <th>已分配cpu(/核)</th>
