--- a/vms/templates/vm_edit.html
+++ b/vms/templates/vm_edit.html
@@ -20,7 +20,7 @@
                         <dt class="col-2 text-right">云主机UUID:</dt> <dd class="col-10" id="id-edit-vm-uuid">{{ vm.hex_uuid }}</dd>
                         <dt class="col-2 text-right">云主机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
                         <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
-                        <dt class="col-2 text-right">分中心:</dt> <dd class="col-10">{{ vm.host.group.center }}</dd>
+                        <dt class="col-2 text-right">数据中心:</dt> <dd class="col-10">{{ vm.host.group.center }}</dd>
                         <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
                         <dt class="col-2 text-right">CPU:</dt> <dd class="col-10">{{ vm.vcpu }}核</dd>
                         <dt class="col-2 text-right">MEM:</dt> <dd class="col-10">{{ vm.mem }}GB</dd>
