--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -17,7 +17,7 @@
             <div class="card-body align-content-center">
                 <form class="form-horizontal" >
                     <div class="form-group row">
-                        <label for="id-center" class="offset-sm-1 col-sm-2 text-right col-form-label">分中心</label>
+                        <label for="id-center" class="offset-sm-1 col-sm-2 text-right col-form-label">数据中心</label>
                         <div class="col-sm-7">
                             <select name="center_id" class="form-control" id="id-center">
                                 {% for c in centers %}
