--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -49,7 +49,7 @@
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/compute/center/"
-                   role="button" target="_blank">分中心</a>
+                   role="button" target="_blank">数据中心</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/compute/group/"
