--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -59,7 +59,7 @@
                                 <div class="col-md-2"><strong>位置信息</strong></div>
                                 <div class="col-md-10">
                                     <div class="row">
-                                        <div class="col-md-4"><strong>所属分中心：</strong>{{ vm.host.group.center.name }}</div>
+                                        <div class="col-md-4"><strong>所属数据中心：</strong>{{ vm.host.group.center.name }}</div>
                                         <div class="col-md-4"><strong>所属集群：</strong>{{ vm.host.group.name }}</div>
                                         <div class="col-md-4"><strong>宿主机IP：</strong>{{ vm.host.ipv4 }}</div>
                                     </div>
