日志显示字体调整

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
                             <span class="p-2 bd-highlight">发布人：{{ version_git_change_set.0.2 }}</span>
                         </p>
 
-                        <pre style="white-space: pre-wrap;word-wrap: break-word">{{ version_git_change_set.0.4 }}</pre>
+                        <pre style="white-space: pre-wrap;word-wrap: break-word; font-size: 1rem">{{ version_git_change_set.0.4 }}</pre>
                         <br>
 
                         <h5>{% trans '历史版本' %}</h5>
@@ -39,7 +39,7 @@
 
                                 <span class="p-2 bd-highlight">发布人：{{ tag.2 }}</span>
                             </p>
-                            <pre style="white-space: pre-wrap;word-wrap: break-word">{{ tag.4 }}</pre>
+                            <pre style="white-space: pre-wrap;word-wrap: break-word; font-size: 1rem">{{ tag.4 }}</pre>
                             <br>
 
                         {% endfor %}
