--- a/network/templates/vlan_list.html
+++ b/network/templates/vlan_list.html
@@ -18,8 +18,9 @@
                      <thead class="thead-light">
                     <tr>
                         <th>编号</th>
-                        <th>VLAN</th>
-                        <th>网桥</th>
+                        <th>网桥名</th>
+                        <th>vlan id</th>
+                        <th>VLAN描述</th>
                         <th>类型</th>
                         <th>标签</th>
                         <th>子网IP</th>
@@ -35,8 +36,9 @@
                     {% for vlan in vlans %}
                     <tr>
                         <th>{{ vlan.id }}</th>
-                        <th>{{ vlan.name }}</th>
                         <th>{{ vlan.br }}</th>
+                        <th>{{ vlan.vlan_id| default:'' }}</th>
+                        <th>{{ vlan.name }}</th>
                         <th>{{ vlan.net_type }}</th>
                         <th>{{ vlan.tag_display }}</th>
                         <th>{{ vlan.subnet_ip }}</th>
