--- a/vms/templates/vms_list.html
+++ b/vms/templates/vms_list.html
@@ -183,5 +183,6 @@
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_list.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vms/vms_shelve_list.js' %}"></script>
 {% endblock %}
 
