--- a/vms/templates/vm_unshelve.html
+++ b/vms/templates/vm_unshelve.html
@@ -8,97 +8,91 @@
 {% block title %}恢复云主机选项{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid">
+
+
+
+    <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>可供恢复的云主机的IP资源 ({{ count }})</strong></span>
+                <span class="card-title">恢复云主机</span>
+                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vms:shelve-list' %}">
+                    搁置云主机列表
+                </a></span>
+            </div>
+            <div class="card-body align-content-center">
+                <form class="form-horizontal">
+                    <div class="form-group row">
+                        <label for="id-center" class="offset-sm-1 col-sm-2 text-right col-form-label">数据中心</label>
+                        <div class="col-sm-7">
+                            <select name="center_id" class="form-control" id="id-center">
+                                {% for c in centers %}
+                                    <option value="{{ c.id }}"
+                                            {% if c.id == center_id %}selected{% endif %}>{{ c.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </form>
+                <form class="form-horizontal" id="id-form-vm-unshelve">
+                    <div class="form-group row">
+                        <label for="id-group" class="offset-sm-1 col-sm-2 text-right col-form-label">主机组</label>
+                        <div class="col-sm-7">
+                            <select name="group_id" class="form-control" id="id-group">
+                                {% for g in groups %}
+                                    <option value="{{ g.id }}"
+                                            {% if g.id == group_id %}selected{% endif %}>{{ g.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id-vlan" class="offset-sm-1 col-sm-2 text-right col-form-label">网段</label>
+                        <div class="col-sm-7">
+                            <select name="vlan_id" class="form-control" id="id-vlan">
+                                <option value="">自动选择</option>
+                                {% for v in vlans %}
+                                    <option value="{{ v.id }}"
+                                            {% if v.id == vlan_id %}selected{% endif %}>{{ v.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 text-right col-form-label">IP</label>
+                        <div class="col-sm-7">
+                            <select name="ipv4" class="form-control" id="id-ipv4">
+                                <option value="">自动选择</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="id-host" class="offset-sm-1 col-sm-2 text-right col-form-label">宿主机</label>
+                        <div class="col-sm-7">
+                            <select name="host_id" class="form-control" id="id-host">
+                                <option value="">自动选择</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-sm-1 col-sm-2">
+                            <button class="btn btn-primary float-right" id="unshelve_submit"
+                                    data-vm-uuid="{{ vm_uuid }}">恢复
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="panel-footer">
 
             </div>
-            <p></p>
-{#            <div class="card-body">#}
-{#                <form role="form" class="form-horizontal" method="get" action="">#}
-{##}
-{#                </form>#}
-{#            </div>#}
-            <table class="table table-hover text-center table-vm-list"
-                   style="word-wrap:break-word;word-break:break-all;">
-                <thead class="thead-light">
-                <tr>
-                    <th>序列</th>
-                    <th>IP地址</th>
-                    <th>mac</th>
-                    <th>网桥名</th>
-                    <th>vlan id</th>
-                    <th>vlan描述</th>
-                    <th>公网/私网</th>
-                    <th>状态</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for ip in mac_ip %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ ip.ipv4 }}</td>
-                    <td>{{ ip.mac }}</td>
-                    <td>{{ ip.vlan.br }}</td>
-                    <td>{{ ip.vlan.vlan_id |default:''}}</td>
-                    <td>{{ ip.vlan.name }}</td>
-                    <td>{{ ip.vlan.get_tag_display }}</td>
-
-                    <td>{{ ip.used| default:"空闲"}}</td>
-                    <td>
-                        <button class="btn btn-sm bg-warning btn-vm-unshelve" type="button"
-                                data-vm-uuid="{{ vm_uuid }}" data-ip-id="{{ ip.id }}">使用此网络</button>
-                    </td>
-                </tr>
-                {% endfor %}
-
-                </tbody>
-            </table>
-            {% with page_list=page_nav.page_list previous=page_nav.previous next=page_nav.next %}
-                {% if page_list %}
-                    <div class="card-footer">
-                        <nav aria-label="Page navigation">
-                            <ul class="pagination" style="margin:0;">
-                                {% if previous %}
-                                    <li class="page-item"><a class="page-link" href="?{{ previous }}"
-                                                             aria-label="Previous"><span
-                                            aria-hidden="true">&laquo;</span></a></li>
-                                {% else %}
-                                    <li class="page-item disable"><span class="page-link"
-                                                                        aria-hidden="true">&laquo;</span></li>
-                                {% endif %}
-
-                                {% for disp, query, active in page_list %}
-                                    {% if active %}
-                                        <li class="page-item active"><a class="page-link"
-                                                                        href="?{{ query }}">{{ disp }}</a></li>
-                                    {% else %}
-                                        <li class="page-item"><a class="page-link" href="?{{ query }}">{{ disp }}</a>
-                                        </li>
-                                    {% endif %}
-                                {% endfor %}
-
-                                {% if next %}
-                                    <li class="page-item"><a class="page-link" href="?{{ next }}"
-                                                             aria-label="Next"><span
-                                            aria-hidden="true">&raquo;</span></a></li>
-                                {% else %}
-                                    <li class="page-item disable"><span class="page-link"
-                                                                        aria-hidden="true">&raquo;</span></li>
-                                {% endif %}
-                            </ul>
-                        </nav>
-                    </div>
-                {% endif %}
-            {% endwith %}
         </div>
     </div>
 {% endblock %}
 
 {% block script %}
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
+    <script type="text/javascript" src="{% static 'art-template/template-web.js' %}"></script>
+    <script type="text/javascript" src="{% static 'vms/vms_create.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_shelve_list.js' %}"></script>
 {% endblock %}
 
