--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -152,7 +152,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="offset-sm-1 col-sm-2">
-                            <button type="submit" class="btn btn-primary float-right">创建</button>
+                            <button type="submit" class="btn btn-primary float-right" id="create_vm">创建</button>
                         </div>
                     </div>
                     <input name="mem_unit" type="hidden" id="mem_unit" value="GB">
