--- a/vms/templates/vm_detail.html
+++ b/vms/templates/vm_detail.html
@@ -52,8 +52,12 @@
                                 <div class="col-10">
                                     <div class="row">
                                         <div class="col-4">
-                                            <strong>运行状态：</strong><span id="vm_status_{{ vm.hex_uuid }}"></span>
+                                            {% if vm.vm_status == vm.VmStatus.NORMAL.value %}
+                                                <strong>运行状态：</strong><span id="vm_status_{{ vm.hex_uuid }}"></span>
                                             <button class="btn btn-sm btn-outline-success btn-update-vm-status"><i class="fa fa-sync"></i></button>
+                                            {% else %}
+                                                <strong>虚拟机状态：</strong><span id="vm_status_{{ vm.vm_status }}" title="{{ vm.vm_status }}">{{ vm.get_vm_status_display }}</span>
+                                            {% endif %}
                                         </div>
                                         <div class="col-4"><strong>创建者：</strong>{{vm.user}}</div>
                                         <div class="col-4"><strong>创建时间：</strong>{{vm.create_time|date:'Y-m-d H:i:s'}}</div>
