--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -12,9 +12,9 @@
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>PCI设备列表 ({{ count }})</strong></span>
-                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vms:vm-create' %}">
-                    创建云主机
-                </a></span>
+{#                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vms:vm-create' %}">#}
+{#                    创建云主机#}
+{#                </a></span>#}
             </div>
             <div class="card-body">
                 <form role="form" class="form-horizontal" method="get" action="">
