附加ip界面修改

--- a/vms/templates/vm_detach_ip_list.html
+++ b/vms/templates/vm_detach_ip_list.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong><a class="btn btn-primary" href="">占用IP列表 ({{ count }})</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-primary" href="">分离IP列表</a></strong></span>
             </div>
             <table class="table table-hover text-center table-vm-list" style="word-wrap:break-word;word-break:break-all;">
                 <thead class="thead-light">
