--- a/network/templates/vlan_show.html
+++ b/network/templates/vlan_show.html
@@ -24,6 +24,7 @@
                         <th>IP</th>
                         <th>MAC</th>
                         <th>主机编号</th>
+                        <th>主机编号（附加）</th>
                         <th>状态</th>
                     </tr>
                     </thead>
@@ -34,6 +35,7 @@
                         <th>{{ macip.ipv4 }}</th>
                         <th>{{ macip.mac }}</th>
                         <th>{{ macip.host_uuid }}</th>
+                        <th>{{ macip.get_attach_ip_vm }}</th>
                         {% if macip.enable %}
                             <th><i class="fa fa-check"></i></th>
                         {% else %}
@@ -50,5 +52,6 @@
 
 {% block script %}
     <script type="text/javascript" src="{% static 'network/vlan_list.js' %}"></script>
+{#    <script type="text/javascript" src="{% static 'vms/vms_attach_ip.js' %}"></script>#}
 {% endblock %}
 
