界面涉及的文案修改

--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -45,7 +45,7 @@
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/device/pcidevice/"
-                   role="button" target="_blank">PCIE设备</a>
+                   role="button" target="_blank">本地设备</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/compute/center/"
@@ -149,7 +149,7 @@
             <td style="color: #0072c9" class="border-top-0">【网络信息管理】</td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block"
-                   href="/admin/network/macip/" role="button" target="_blank">MAC与IP地址映射</a>
+                   href="/admin/network/macip/" role="button" target="_blank">IP地址</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/vpn/vpnauth/"
