--- a/vdisk/templates/vdisk_mount_to_vm.html
+++ b/vdisk/templates/vdisk_mount_to_vm.html
@@ -70,7 +70,7 @@
                                 <td>{{ vm.user }}</td>
                                 <td>{{ vm.image_name }}</td>
                                 <td>
-                                    {{ vm.vcpu }} / {{ vm.mem|sizeformat:'MB' }}
+                                    {{ vm.vcpu }} / {{ vm.mem|sizeformat:'GB' }}
                                 </td>
         {#                        <td>#}
         {#                            {% if vm.vdisks %}#}
