--- a/vms/templates/vm_attach_ip_list.html
+++ b/vms/templates/vm_attach_ip_list.html
@@ -11,70 +11,121 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong><a class="btn btn-primary" href="">IP列表</a></strong></span>
-                <span class="card-title"><strong><a class="btn btn-primary"
-                                                    href="{% url 'vms:vm-detach-ip' vm_uuid=vm_uuid %}">分离IP</a></strong></span>
+                <span class="card-title"><strong>附加IP</strong></span>
+                <div class="float-right">
+                    <a class="btn btn-sm btn-primary"
+                       href="{% url 'vms:vm-detach-ip' vm_uuid=vm_uuid %}">移除IP</a>
+                    <a class="btn btn-sm btn-info" href="{% url 'network:vlan_show' %}?vlan={{ vlan_id }}">IP列表</a>
+                </div>
             </div>
-            <table class="table table-hover text-center table-vm-list" style="word-wrap:break-word;word-break:break-all;">
-                <thead class="thead-light">
-                <tr>
-                    <th>编号</th>
-                    <th>IP地址</th>
-                    <th>vlan</th>
-                    <th>MAC</th>
-                    <th>备注</th>
-                    <th>操作</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for ip in mac_ip %}
-                    <tr id="tr_">
-                        <td>{{ ip.id }}</td>
-                        <td>{{ ip.ipv4 }}</td>
-                        <td>{{ ip.vlan_id }}</td>
-                        <td>{{ ip.mac }}</td>
-                        <td>{{ ip.desc }}</td>
-
-                        <td>
-                            <button class="btn btn-primary btn-vm-attach-ip" data-attach-ip-id="{{ ip.id }}" data-vm-uuid="{{ vm_uuid }}">占用ip</button>
-                        </td>
-                    </tr>
-                {% endfor %}
-
-                </tbody>
-            </table>
-            {% with page_list=page_nav.page_list previous=page_nav.previous next=page_nav.next %}
-                {% if page_list %}
-                    <div class="card-footer">
-                        <nav aria-label="Page navigation">
-                            <ul class="pagination"  style="margin:0;">
-                                {% if previous %}
-                                    <li class="page-item"><a class="page-link" href="?{{ previous }}" aria-label="Previous"><span
-                                            aria-hidden="true">&laquo;</span></a></li>
-                                {% else %}
-                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&laquo;</span></li>
-                                {% endif %}
-
-                                {% for disp, query, active in page_list %}
-                                    {% if active %}
-                                        <li class="page-item active"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
-                                    {% else %}
-                                        <li class="page-item"><a class="page-link" href="?{{ query }}">{{ disp }}</a></li>
-                                    {% endif %}
-                                {% endfor %}
-
-                                {% if next %}
-                                    <li class="page-item"><a class="page-link" href="?{{ next }}" aria-label="Next"><span
-                                            aria-hidden="true">&raquo;</span></a></li>
-                                {% else %}
-                                    <li class="page-item disable"><span class="page-link" aria-hidden="true">&raquo;</span></li>
-                                {% endif %}
-                            </ul>
-                        </nav>
+            <div class="card-body">
+                <div class="">
+                    <div class="text-primary h4">云主机信息:</div>
+                    <div class="">
+                        <dl class="row">
+                            <dt class="col-2 text-right">云主机UUID:</dt>
+                            <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
+                            <dt class="col-2 text-right">云主机IP:</dt>
+                            <dd class="col-10">{{ vm.ipv4 }}</dd>
+                            <dt class="col-2 text-right">镜像:</dt>
+                            <dd class="col-10">{{ vm.image_name }}</dd>
+                            <dt class="col-2 text-right">机组:</dt>
+                            <dd class="col-10">{{ vm.host.group }}</dd>
+                            <dt class="col-2 text-right">备注:</dt>
+                            <dd class="col-10">{{ vm.remarks }}</dd>
+                        </dl>
                     </div>
-                {% endif %}
-            {% endwith %}
+                </div>
+                <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
+                <div>
+                    <div class="text-success h4 col-sm-4">可供附加的IP地址：</div>
+{#                    <div class="float-right col-sm-8">#}
+{#                        <form role="form" class="form-horizontal" method="get" action="">#}
+{#                            <div class="input-group" style="">#}
+{#                                <div class="input-group-prepend">#}
+{#                                    <label class="input-group-text" for="id-center">关键字</label>#}
+{#                                </div>#}
+{#                                <input type="text" class="form-control" name="search" value="{{ search }}"#}
+{#                                       placeholder="搜 IP"/>#}
+{#                                <span class="input-group-prepend"></span>#}
+{#                                <button type="submit" class="btn btn-primary form-control">筛选</button>#}
+{#                            </div>#}
+{#                        </form>#}
+{#                    </div>#}
+                </div>
+                <table class="table table-bordered table-vm-list"
+                       style="word-wrap:break-word;word-break:break-all;">
+                    <tr>
+                        <th>编号</th>
+                        <th>IP地址</th>
+                        <th>MAC</th>
+                        <th>网桥名</th>
+                        <th>VLAN描述</th>
+                        <th>标签</th>
+                        <th>备注</th>
+                        <th>操作</th>
+                    </tr>
+                    {% for ip in mac_ip %}
+                        <tr id="tr_">
+                            <td>{{ ip.id }}</td>
+                            <td>{{ ip.ipv4 }}</td>
+                            <td>{{ ip.mac }}</td>
+                            <td>{{ ip.vlan.br }}</td>
+                            <td>{{ ip.vlan.name }}</td>
+                            <td>{{ ip.vlan.get_tag_display }}</td>
+                            <td>{{ ip.desc }}</td>
+
+                            <td>
+                                <button class="btn btn-primary btn-vm-attach-ip" data-attach-ip-id="{{ ip.id }}"
+                                        data-vm-uuid="{{ vm_uuid }}">附加IP
+                                </button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+                {% with page_list=page_nav.page_list previous=page_nav.previous next=page_nav.next %}
+                    {% if page_list %}
+                        <div class="card-footer">
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination" style="margin:0;">
+                                    {% if previous %}
+                                        <li class="page-item"><a class="page-link" href="?{{ previous }}"
+                                                                 aria-label="Previous"><span
+                                                aria-hidden="true">&laquo;</span></a></li>
+                                    {% else %}
+                                        <li class="page-item disable"><span class="page-link"
+                                                                            aria-hidden="true">&laquo;</span>
+                                        </li>
+                                    {% endif %}
+
+                                    {% for disp, query, active in page_list %}
+                                        {% if active %}
+                                            <li class="page-item active"><a class="page-link"
+                                                                            href="?{{ query }}">{{ disp }}</a></li>
+                                        {% else %}
+                                            <li class="page-item"><a class="page-link"
+                                                                     href="?{{ query }}">{{ disp }}</a></li>
+                                        {% endif %}
+                                    {% endfor %}
+
+                                    {% if next %}
+                                        <li class="page-item"><a class="page-link" href="?{{ next }}"
+                                                                 aria-label="Next"><span
+                                                aria-hidden="true">&raquo;</span></a></li>
+                                    {% else %}
+                                        <li class="page-item disable"><span class="page-link"
+                                                                            aria-hidden="true">&raquo;</span>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            </nav>
+                        </div>
+                    {% endif %}
+                {% endwith %}
+
+            </div>
         </div>
+
     </div>
 {% endblock %}
 
@@ -82,6 +133,6 @@
     <script type="text/javascript" src="{% static 'evcloud/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'vms/vms_attach_ip.js' %}"></script>
-{#    <script type="text/javascript" src="{% static 'vms/vms_shelve_list.js' %}"></script>#}
+    {#    <script type="text/javascript" src="{% static 'vms/vms_shelve_list.js' %}"></script>#}
 {% endblock %}
 
