检索内容修改

--- a/network/templates/vlan_show.html
+++ b/network/templates/vlan_show.html
@@ -21,8 +21,8 @@
                     <thead class="thead-light">
                     <tr>
                         <th>编号</th>
-                        <th>IP</th>
-                        <th>MAC</th>
+                        <th>IP地址</th>
+                        <th>MAC地址</th>
                         <th>主机编号</th>
                         <th>主机编号（附加）</th>
                         <th>状态</th>
