--- a/vdisk/templates/vdisk_list.html
+++ b/vdisk/templates/vdisk_list.html
@@ -76,7 +76,7 @@
                             <label class="input-group-text">关键字</label>
                         </div>
                         <input type="text" class="form-control" name="search" value="{{ search }}"
-                               placeholder="搜 UUID、IP、备注"/>
+                               placeholder="搜 UUID、IP地址、备注"/>
                         <span class="input-group-text"></span>
                         <button type="submit" class="btn btn-primary form-control">筛选</button>
                     </div>
