--- a/vms/templates/vm_detach_ip_list.html
+++ b/vms/templates/vm_detach_ip_list.html
@@ -5,13 +5,13 @@
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'vms/vms_list.css' %}">
 {% endblock %}
-{% block title %}虚拟机使用的IP列表{% endblock %}
+{% block title %}虚拟机使用的IP地址列表{% endblock %}
 
 {% block boby %}
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong><a class="btn btn-primary" href="">移除IP列表</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-primary" href="">移除IP地址列表</a></strong></span>
             </div>
             <div class="">
                 <div class="text-primary h4">云主机信息:</div>
