--- a/vms/templates/vm_mount_pci.html
+++ b/vms/templates/vm_mount_pci.html
@@ -37,7 +37,7 @@
                                         <label class="input-group-text" for="id-center">关键字</label>
                                     </div>
                                     <input type="text" class="form-control" name="search" value="{{ search }}"
-                                           id="id-center" placeholder="搜 IP、备注"/>
+                                           id="id-center" placeholder="搜 IP地址、备注"/>
                                     <div class="input-group-append">
                                         <button type="submit" class="btn btn-primary form-control">筛选</button>
                                     </div>
