--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -65,7 +65,7 @@
                             <label class="input-group-text">关键字</label>
                         </div>
                         <input type="text" class="form-control" name="search" value="{{ search }}"
-                               placeholder="搜 IP、备注"/>
+                               placeholder="搜 IP地址、备注"/>
                         <span class="input-group-text"></span>
                         <button type="submit" class="btn btn-primary form-control">筛选</button>
                     </div>
